Updating deps. Adding http-kit.