@@ -4,12 +4,13 @@
             :url "http://www.gnu.org/licenses/"
             :distribution :repo}
   :url "http://www.gnu.org/software/emacs/"
-  :dependencies [[org.clojure/clojure "1.5.1"]
+  :dependencies [[org.clojure/clojure "1.6.0"]
                  [clojure-lanterna "0.9.3"]
-                 [com.taoensso/timbre "2.7.1"]
+                 [http-kit "2.1.16"]
+                 [com.taoensso/timbre "3.1.6"]
                  [org.tcrawley/dynapath "0.2.3"]
                  [fipp "0.4.1"]
-                 [org.clojure/core.async "0.1.267.0-0d7780-alpha"]]
+                 [org.clojure/core.async "0.1.298.0-2a82a1-alpha"]]
   :repositories {"sonatype-staging"
                  "https://oss.sonatype.org/content/groups/staging/"}
   :plugins [[lein-difftest "2.0.0"]
@@ -21,5 +22,5 @@
   :jar-exclusions [#".*\.elc" #"TUTORIAL\..*"
                    #"ChangeLog.*" #"Makefile.*" #"README" #"\.gitignore"]
   :java-source-paths ["src"]
-  :jvm-opts ["-Xss4m" "-XX:MaxPermSize=192m"]
+  :jvm-opts ["-Xss4m"]
   :main deuce.main)
